Web Inspector: Dark Mode: unreadable text when hovering CSS properties while holding Command https://bugs.webkit.org/show_bug.cgi?id=190548 <rdar://problem/45242098>
Reviewed by Joseph Pecoraro.

* UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css:
(.meta-key-pressed .spreadsheet-css-declaration:not(.locked) :matches(.name, .value):not(.editing):hover):
In the light mode the color remained the same.


Canonical link: https://commits.webkit.org/205517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237143 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css
@@ -149,7 +149,7 @@
 }
 
 .meta-key-pressed .spreadsheet-css-declaration:not(.locked) :matches(.name, .value):not(.editing):hover {
-    color: blue !important;
+    color: var(--syntax-highlight-link-color) !important;
     text-decoration: underline !important;
     cursor: pointer !important;
     -webkit-text-stroke-width: 0 !important;
